11 oct 2004 mipsator
 * imported experimental cpu family detection.

# snapshot 0.8.1-s8

26 sep 2004 mipsator
 * updated pmkfile.5 to sync with latest changes.
 * updated README and INSTALL to warn about non POSIX compliant shells.

26 sep 2004 mipsator
 * improved CHECK_LIB to handle more than one function. 

24 sep 2004 mipsator
 * CHECK_HEADER is now able to check more than one function (feature
   asked by Gergely Czuczy).
 * fixed initialisation of some variables in pmk.c (noticed on irix).
 * updated samples/bin_c to use config.h and one check for strl*()
   functions.

23 sep 2004 mipsator
 * returned on getopts use in pmkcfg.sh to handle blanks in arguments.

# snapshot 0.8.1-s7

10 Sep 2004 xsa
 * imported some IRIX stuff in pmkcomp.dat.

06 Sep 2004 mipsator
 * improved pmkcfg.sh function to return test status (0 or 1).

05 Sep 2004 mipsator
 * added check_lib_function() in pmkcfg.sh (preliminary stuff).

29 Aug 2004 mipsator
 * more process_required(), less redundant code.

28 Aug 2004 mipsator
 * added process_required() to remove redundant code for required flag.

# snapshot 0.8.1-s6

28 Aug 2004 mipsator
 * fixed a bug introduced by an improvement while fixing config file
   parsing.

# snapshot 0.8.1-s5

27 Aug 2004 mipsator
 * fixed bugs in parse_pmkconf().
 * added more debug stuff.

21 Aug 2004 mipsator
 * added compiler flags in sample bin makefiles.

20 Aug 2004 mreindl
 * add bin_c++ sample

20 Aug 2004 mipsator
 * move backup right before copy of new config file.

19 Aug 2004 mreindl
 * backup pmk.conf in pmksetup if it already exists
 * update bin_c sample and integrate it into samples/Makefile

# snapshot 0.8.1-s4

15 Aug 2004 mipsator
 * added missing support of additional defines in CHECK_CONFIG and
   CHECK_PKG_CONFIG.

08 Aug 2004 mipsator
 * added support for additional defines (keyword DEFS) in CHECK_HEADER,
   CHECK_LIB, CHECK_TYPE and CHECK_VARIABLE.
 * set option keywords as defines.
 * modified str_to_def() to use static buffer.