@@ -13,13 +13,9 @@ To build and install pmk on your system use one of the two following
 methods:
 
 1) The pmkcfg.sh configuration script:
-  ./pmkcfg.sh
+  sh pmkcfg.sh
   make
   make install
-
-  Note: on some system the default sh shell is not POSIX compliant.
-  For example, on Tru64, you will need to set the BIN_SH variable to
-  'xpg4' to call sh in POSIX mode.
 
 2) Using previously installed pmk binary:
   pmk
@@ -43,7 +39,7 @@ The default prefixes are:
 Example:
 
 If you want a global use with /opt as prefix you will use the following:
-  ./pmkcfg.sh -p /opt
+  sh pmkcfg.sh -p /opt
 
 
 More about the pmkfile
